fix signup with sending email
