# src/main/java/com/api/chatstack/mappers/UserMapper.java
@@ -13,7 +13,7 @@ public class UserMapper implements Mapper<User, UserEntity> {
         return new User()
                 .fullname(entity.getFullName())
                 .id(entity.getId())
-                .passwordHashed(entity.getPasswordHashed())
+//                .passwordHashed(entity.getPasswordHashed())
                 .displayName(entity.getDisplayName())
                 .email(entity.getEmail())
                 .status(entity.getStatus())
@@ -30,7 +30,7 @@ public class UserMapper implements Mapper<User, UserEntity> {
                 .id(dto.getId())
                 .email(dto.getEmail())
                 .emailVerified(dto.getEmailVerified())
-                .passwordHashed(dto.getPasswordHashed())
+//                .passwordHashed(dto.getPasswordHashed())
                 .fullName(dto.getFullname())
                 .displayName(dto.getDisplayName())
                 .status(dto.getStatus())
